# scrape_gis_data

./: .gitignore  README.md
rajasthan_citizenudh/: README.md  main.py  pyproject.toml  requirements.txt
rajasthan_citizenudh/output/JDA/CCZM/: CCZM.gpkg
rajasthan_citizenudh/output/JDA/InstitutionalAllotment/: Institutional Allotment.gpkg
rajasthan_citizenudh/output/JDA/MasterDevelopmentPlan/: Landuse.gpkg  Road.gpkg
rajasthan_citizenudh/output/JDA/MasterDevelopmentPlanDraft/: Landuse.gpkg  Road.gpkg
scrape_lib/: pyproject.toml
