[project]
name = "rajasthan-citizenudh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyarrow",
    'geopandas',
    "scrape-lib",
    "requests",
    "tqdm"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
scrape-lib = { path = "../scrape_lib", editable = true }
